--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
-    "vue-router": "^2.0.1"
+    "vue-router": "^2.0.1",
+    "axios": "^0.26.1",
+    "vuex": "^3.0.0"
   },
   "browserslist": [
     "> 1%",
